--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Shop-blue</title>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
@@ -39,6 +39,7 @@
             <div class="professional-line">
               <p>&copy; 2023 Shop-Blue. All rights reserved. By Shaaf Sheikh</p>
             </div>
+            <button class="signin-button"><a href="signin.html">Sign in</a></button>
           </footer>
 </body>
 </html>
