--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact with Shop-blue</title>
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
@@ -46,6 +46,7 @@
             By Shaaf Sheikh
           </p>
         </div>
+        <button class="signin-button"><a href="signin.html">Sign in</a></button>
       </footer>
 </body>
 </html>
