--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <header>
     <nav>
+    
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
@@ -34,7 +35,8 @@
       <p>&copy; 2023 Shop-Blue. All rights reserved.
         By Shaaf Sheikh
       </p>
-    </div>
+      <button class="signin-button"><a href="signin.html">Sign in</a></button>
+
   </footer>
 
 </body>
