--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Products of Shop-blue</title>
     <link rel="stylesheet" href="products.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -60,6 +60,7 @@
       <div class="professional-line">
         <p>&copy; 2023 Shop-Blue. All rights reserved. By Shaaf Sheikh</p>
       </div>
+      <button class="signin-button"><a href="signin.html">Sign in</a></button>
     </footer>
 </body>
 </html>
